<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CRA_pink"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/EditNoun"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_noun"
        android:textColorHint="@color/white"
        android:inputType="textPersonName|text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyText" />

    <EditText
        android:id="@+id/EditAdjective"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edit_adjective"
        android:textColorHint="@color/white"
        android:inputType="textPersonName|text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditNoun" />

    <EditText
        android:id="@+id/EditVerb"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edit_verb"
        android:textColorHint="@color/white"
        android:inputType="textPersonName|text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditAdjective" />

    <EditText
        android:id="@+id/EditProfessor"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edit_professor"
        android:textColorHint="@color/white"
        android:inputType="textPersonName|text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditVerb" />

    <EditText
        android:id="@+id/EditAthlete"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edit_athlete"
        android:textColorHint="@color/white"
        android:inputType="textPersonName|text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditProfessor" />

    <EditText
        android:id="@+id/EditNumber"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edit_number"
        android:textColorHint="@color/white"
        android:inputType="textPersonName|text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditAthlete" />

    <EditText
        android:id="@+id/EditFood"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edit_food"
        android:textColorHint="@color/white"
        android:inputType="textPersonName|text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditNumber" />

    <EditText
        android:id="@+id/EditHoliday"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edit_holiday"
        android:inputType="textPersonName|text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditFood" />

    <Button
        android:id="@+id/button"
        android:layout_width="136dp"
        android:layout_height="66dp"
        android:layout_marginBottom="24dp"
        android:background="@color/CRA_orange"
        android:onClick="sendMessage"
        android:text="@string/button_submit"
        android:textColor="#795548"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/storyText"
        android:layout_width="376dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/word_list_message"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>